@@ -7,6 +7,8 @@ from trytond.model.exceptions import AccessError
 from trytond.pool import Pool
 from trytond.tests.test_tryton import activate_module, with_transaction
 
+_context = {'_check_access': True}
+
 
 class ModelRuleTestCase(unittest.TestCase):
     "Test Model Rule"
@@ -15,7 +17,7 @@ class ModelRuleTestCase(unittest.TestCase):
     def setUpClass(cls):
         activate_module('tests')
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_create_without_rule(self):
         "Test create without rule"
         pool = Pool()
@@ -23,7 +25,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         test, = TestRule.create([{}])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_create_with_rule(self):
         "Test create with rule"
         pool = Pool()
@@ -48,7 +50,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         test, = TestRule.create([{'field': 'bar'}])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_create_with_rule_fail(self):
         "Test create with rule fail"
         pool = Pool()
@@ -74,7 +76,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             test, = TestRule.create([{'field': 'foo'}])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_create_with_default_rule_fail(self):
         "Test create with default rule fail"
         pool = Pool()
@@ -101,7 +103,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             test, = TestRule.create([{'field': 'foo'}])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_write_without_rule(self):
         "Test write without rule"
         pool = Pool()
@@ -111,7 +113,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.write([test], {'field': 'foo'})
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_write_with_rule(self):
         "Test write with rule"
         pool = Pool()
@@ -137,7 +139,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.write([test], {'field': 'bar'})
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_write_with_rule_fail_before(self):
         "Test write with rule fail before"
         pool = Pool()
@@ -164,7 +166,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             TestRule.write([test], {'field': 'bar'})
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_write_with_rule_fail_after(self):
         "Test write with rule fail after"
         pool = Pool()
@@ -191,7 +193,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             TestRule.write([test], {'field': 'foo'})
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_delete_without_rule(self):
         "Test delete without rule"
         pool = Pool()
@@ -201,7 +203,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.delete([test])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_delete_with_rule(self):
         "Test delete with rule"
         pool = Pool()
@@ -227,7 +229,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.delete([test])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_delete_with_rule_fail(self):
         "Test delete with rule fail"
         pool = Pool()
@@ -254,7 +256,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             TestRule.delete([test])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_read_without_rule(self):
         "Test read without rule"
         pool = Pool()
@@ -264,7 +266,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.read([test.id], ['field'])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_read_with_rule(self):
         "Test read with rule"
         pool = Pool()
@@ -290,7 +292,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRule.read([test.id], ['field'])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_perm_read_with_rule_fail(self):
         "Test read with rule fail"
         pool = Pool()
@@ -317,7 +319,7 @@ class ModelRuleTestCase(unittest.TestCase):
         with self.assertRaisesRegex(AccessError, "Field different from foo"):
             TestRule.read([test.id], ['field'])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_search_without_rule(self):
         "Test search without rule"
         pool = Pool()
@@ -327,7 +329,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         self.assertListEqual(TestRule.search([]), [test])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_search_with_rule(self):
         "Test search with rule"
         pool = Pool()
@@ -353,7 +355,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         self.assertListEqual(TestRule.search([]), [test])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_search_with_rule_match(self):
         "Test search with rule match"
         pool = Pool()
@@ -379,7 +381,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         self.assertListEqual(TestRule.search([]), [])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_write_field_no_rule(self):
         "Test _write field when there's no rule"
         pool = Pool()
@@ -389,7 +391,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([writable.id], ['_write'])
         self.assertEqual(value['_write'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_write_field_rule_True(self):
         "Test _write field when there's a rule - True"
         pool = Pool()
@@ -416,7 +418,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([writable.id], ['_write'])
         self.assertEqual(value['_write'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_write_field_rule_False(self):
         "Test _write field when there's a rule - False"
         pool = Pool()
@@ -443,7 +445,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([non_writable.id], ['_write'])
         self.assertEqual(value['_write'], False)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_write_field_relation_rule_True(self):
         "Test _write field when there's a rule with a relation - True"
         pool = Pool()
@@ -472,7 +474,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([writable.id], ['_write'])
         self.assertEqual(value['_write'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_write_field_relation_rule_False(self):
         "Test _write field when there's a rule with a relation - False"
         pool = Pool()
@@ -501,7 +503,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([non_writable.id], ['_write'])
         self.assertEqual(value['_write'], False)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_delete_field_no_rule(self):
         "Test _delete field when there's no rule"
         pool = Pool()
@@ -511,7 +513,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([deletable.id], ['_delete'])
         self.assertEqual(value['_delete'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_delete_field_rule_True(self):
         "Test _delete field when there's a rule - True"
         pool = Pool()
@@ -538,7 +540,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([deletable.id], ['_delete'])
         self.assertEqual(value['_delete'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_delete_field_rule_False(self):
         "Test _delete field when there's a rule - False"
         pool = Pool()
@@ -565,7 +567,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([non_deletable.id], ['_delete'])
         self.assertEqual(value['_delete'], False)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_delete_field_relation_rule_True(self):
         "Test _delete field when there's a rule with a relation - True"
         pool = Pool()
@@ -594,7 +596,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([deletable.id], ['_delete'])
         self.assertEqual(value['_delete'], True)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_delete_field_relation_rule_False(self):
         "Test _delete field when there's a rule with a relation - False"
         pool = Pool()
@@ -623,7 +625,7 @@ class ModelRuleTestCase(unittest.TestCase):
         value, = TestRule.read([non_deletable.id], ['_delete'])
         self.assertEqual(value['_delete'], False)
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_model_with_rule(self):
         "Test model with rule"
         pool = Pool()
@@ -651,7 +653,7 @@ class ModelRuleTestCase(unittest.TestCase):
 
         TestRuleModel.read([test.id], ['name'])
 
-    @with_transaction()
+    @with_transaction(context=_context)
     def test_model_with_rule_fail(self):
         "Test model with rule fail"
         pool = Pool()
